--- a/index.html
+++ b/index.html
@@ -51,57 +51,72 @@
         <button class="leftBtn">
           <img src="./assets/icon-swiper-1.svg" alt="left swiper button" />
         </button>
-        <img src="http://placeholder.co/1920x500" alt="" />
+        <!-- 배너 이동 링크 -->
+        <a href="#">
+          <img src="http://placeholder.co/1920x500" alt="" />
+        </a>
         <button class="rightBtn">
           <img src="./assets/icon-swiper-2.svg" alt="right swiper button" />
         </button>
       </section>
+      <!-- 상품 목록 리스트 -->
+      <!-- 아티클별 a 태그 적용 -->
       <section class="goodsList">
         <h2 class="sr-only">호두 상품 목록</h2>
         <article>
-          <img
-            src="http://placeholder.co/380x380"
-            alt="프로그래밍 언어 로고가 다양하게 그려진 파우치"
-          />
-          <p>우당탕탕 라이캣의 실험실</p>
-          <h3>Hack Your Life 개발자 노트북 파우치</h3>
-          <p class="price"><span>29,000</span>원</p>
+          <a href="#">
+            <img
+              src="http://placeholder.co/380x380"
+              alt="프로그래밍 언어 로고가 다양하게 그려진 파우치"
+            />
+            <p>우당탕탕 라이캣의 실험실</p>
+            <h3>Hack Your Life 개발자 노트북 파우치</h3>
+            <p class="price"><span>29,000</span>원</p>
+          </a>
         </article>
         <article>
-          <img
-            src="http://placeholder.co/380x380"
-            alt="고양이와 태그가그려진 머그컵과 노트북 키링"
-          />
-          <p>제주코딩베이스캠프</p>
-          <h3>네 개발잡니다 개발자키링 금속키링</h3>
-          <p class="price"><span>29,000</span>원</p>
+          <a href="#">
+            <img
+              src="http://placeholder.co/380x380"
+              alt="고양이와 태그가그려진 머그컵과 노트북 키링"
+            />
+            <p>제주코딩베이스캠프</p>
+            <h3>네 개발잡니다 개발자키링 금속키링</h3>
+            <p class="price"><span>29,000</span>원</p>
+          </a>
         </article>
         <article>
-          <img
-            src="http://placeholder.co/380x380"
-            alt="캐릭터들이 그려진 담요를 어깨에 두르고 있는 토끼 캐릭터"
-          />
-          <p>백엔드글로벌</p>
-          <h3>딥러닝 개발자 무릎 담요</h3>
-          <p class="price"><span>29,000</span>원</p>
+          <a href="#">
+            <img
+              src="http://placeholder.co/380x380"
+              alt="캐릭터들이 그려진 담요를 어깨에 두르고 있는 토끼 캐릭터"
+            />
+            <p>백엔드글로벌</p>
+            <h3>딥러닝 개발자 무릎 담요</h3>
+            <p class="price"><span>29,000</span>원</p>
+          </a>
         </article>
         <article>
-          <img
-            src="http://placeholder.co/380x380"
-            alt="캐릭터와 단어가 있는 스티커 팩"
-          />
-          <p>코딩앤유</p>
-          <h3>우당탕탕 라이캣의 실험실 스티커 팩</h3>
-          <p class="price"><span>29,000</span>원</p>
+          <a href="#">
+            <img
+              src="http://placeholder.co/380x380"
+              alt="캐릭터와 단어가 있는 스티커 팩"
+            />
+            <p>코딩앤유</p>
+            <h3>우당탕탕 라이캣의 실험실 스티커 팩</h3>
+            <p class="price"><span>29,000</span>원</p>
+          </a>
         </article>
         <article>
-          <img
-            src="http://placeholder.co/380x380"
-            alt="404벌레캐릭터와 살충제를 들고있는 개구리 캐릭터"
-          />
-          <p>파이썬스쿨</p>
-          <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
-          <p class="price"><span>29,000</span>원</p>
+          <a href="#">
+            <img
+              src="http://placeholder.co/380x380"
+              alt="404벌레캐릭터와 살충제를 들고있는 개구리 캐릭터"
+            />
+            <p>파이썬스쿨</p>
+            <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
+            <p class="price"><span>29,000</span>원</p>
+          </a>
         </article>
       </section>
     </main>
