--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
         <ul class="about-wrap">
           <li><a href="#">호두샵 소개</a></li>
           <li><a href="#">이용약관</a></li>
-          <li><a href="#">개인정보처리방침</a></li>
+          <li>
+            <span>
+              <a href="#">개인정보처리방침</a>
+            </span>
+          </li>
           <li><a href="#">전자금융거래약관</a></li>
           <li><a href="#">청소년보호정책</a></li>
           <li><a href="#">제휴문의</a></li>
