--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             </a>
           </li>
           <li>
+            <!-- 기본페이지 로그인 -> 로그인 후 마이페이지로 변경 -->
             <a href="./login.html" class="loginBtn"
               ><img src="./assets/icon-user.svg" alt="" />
-              마이페이지
+              로그인
             </a>
           </li>
         </ul>
