--- a/login.html
+++ b/login.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <header>
+      <!-- 로고 클릭 시 상품목록 페이지로 이동 -->
       <h1>
-        <a href="#"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
+        <a href="index.html"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
       </h1>
     </header>
     <main>
