--- a/signup.html
+++ b/signup.html
@@ -10,10 +10,9 @@
   </head>
   <body>
     <header>
+      <!-- 로고 클릭시 상품목록 페이지로 이동 -->
       <h1>
-        <a href="./login.html"
-          ><img src="./assets/Logo-hodu.png" alt="HODU"
-        /></a>
+        <a href="index.html"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
       </h1>
     </header>
     <main>
