🎨 article 내 이미지 적용

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <article>
           <a href="#">
             <img
-              src="http://placeholder.co/380x380"
+              src="./assets/노트북파우치.png"
               alt="프로그래밍 언어 로고가 다양하게 그려진 파우치"
             />
             <p>우당탕탕 라이캣의 실험실</p>
@@ -78,7 +78,7 @@
         <article>
           <a href="#">
             <img
-              src="http://placeholder.co/380x380"
+              src="./assets/키링.png"
               alt="고양이와 태그가그려진 머그컵과 노트북 키링"
             />
             <p>제주코딩베이스캠프</p>
@@ -89,7 +89,7 @@
         <article>
           <a href="#">
             <img
-              src="http://placeholder.co/380x380"
+              src="./assets/담요.png"
               alt="캐릭터들이 그려진 담요를 어깨에 두르고 있는 토끼 캐릭터"
             />
             <p>백엔드글로벌</p>
@@ -100,7 +100,7 @@
         <article>
           <a href="#">
             <img
-              src="http://placeholder.co/380x380"
+              src="./assets/스티커.png"
               alt="캐릭터와 단어가 있는 스티커 팩"
             />
             <p>코딩앤유</p>
@@ -111,7 +111,7 @@
         <article>
           <a href="#">
             <img
-              src="http://placeholder.co/380x380"
+              src="./assets/벌레잡는키링.png"
               alt="404벌레캐릭터와 살충제를 들고있는 개구리 캐릭터"
             />
             <p>파이썬스쿨</p>
