--- a/error.html
+++ b/error.html
@@ -6,6 +6,22 @@
     <title>404 : Not Found</title>
   </head>
   <body>
-    <script></script>
+    <main>
+      <img src="./assets/icon-404.svg" alt="" />
+      <h1>페이지를 찾을 수 없습니다.</h1>
+      <p>
+        페이지가 존재하지 않거나 사용할 수 없는 페이지 입니다.
+        <br />
+        웹 주소가 올바른지 확인해 주세요.
+      </p>
+      <a href="index.html">메인으로</a>
+      <button type="button">이전 페이지</button>
+    </main>
+    <script>
+      // 이전페이지 버튼 클릭 시 이전 페이지로 이동
+      document.querySelector("button").addEventListener("click", () => {
+        location.href = history.back();
+      });
+    </script>
   </body>
 </html>
