--- a/goods.html
+++ b/goods.html
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-      <img src="./assets/담요.png" alt="" />
+      <img src="./assets/상세목록이미지.png" alt="" />
       <section>
         <div class="goodsInfo">
           <p>백엔드 글로벌</p>
