🎨 상품 상세 css 일부 적용

--- a/goods.html
+++ b/goods.html
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="buy-wrap">
         <h2 class="sr-only">상품 상세 내용</h2>
         <img src="./assets/상세목록이미지.png" alt="" />
         <section>
