🎨 상세이미지명 수정

--- a/goods.html
+++ b/goods.html
@@ -48,7 +48,7 @@
     <main>
       <section class="buy-wrap">
         <h2 class="sr-only">상품 상세 내용</h2>
-        <img src="./assets/상세목록이미지.png" alt="" />
+        <img src="./assets/담요상세이미지.png" alt="" />
         <section>
           <div class="goodsInfo">
             <p>백엔드 글로벌</p>
