상품 버튼 css 일부 적용

--- a/goods.html
+++ b/goods.html
@@ -49,7 +49,7 @@
       <section class="buy-wrap">
         <h2 class="sr-only">상품 상세 내용</h2>
         <img src="./assets/담요상세이미지.png" alt="" />
-        <section>
+        <section class="goodsInfo-wrap">
           <div class="goodsInfo">
             <p>백엔드 글로벌</p>
             <h3>딥러닝 개발자 무릎 담요</h3>
@@ -59,9 +59,13 @@
           <p>택배배송/ 무료배송</p>
           <hr />
           <form action="#">
-            <button class="minus" type="button">-</button>
+            <button class="minus" type="button">
+              <img src="./assets/icon-minus-line.svg" alt="수량 빼기" />
+            </button>
             <input type="number" min="1" value="1" />
-            <button class="plus" type="button">+</button>
+            <button class="plus" type="button">
+              <img src="./assets/icon-plus-line.svg" alt="수량 더하기" />
+            </button>
             <hr />
             <ul>
               <li>총 상품 금액</li>
