🎨 상품 버튼 css 적용

--- a/goods.html
+++ b/goods.html
@@ -70,14 +70,16 @@
             <ul>
               <li>총 상품 금액</li>
               <li>
-                <div>
+                <div class="priceInfo">
                   <p>총 수량<span class="count">1</span>개</p>
-                  <span class="totalPrice">17,500</span>원
+                  <p><span class="totalPrice">17,500</span> 원</p>
                 </div>
               </li>
             </ul>
-            <button class="buy">바로 구매</button>
-            <button class="cart">장바구니</button>
+            <div class="buyBtns">
+              <button class="buy">바로 구매</button>
+              <button class="cart">장바구니</button>
+            </div>
           </form>
         </section>
 
