🎨 상품 상세 페이지 연결

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </a>
         </article>
         <article>
-          <a href="#">
+          <a href="goods.html">
             <img
               src="./assets/담요.png"
               alt="캐릭터들이 그려진 담요를 어깨에 두르고 있는 토끼 캐릭터"
