🎨 상품목록 페이지 연결

--- a/goods.html
+++ b/goods.html
@@ -12,7 +12,9 @@
     <header>
       <div class="search-wrap">
         <h1>
-          <a href="#"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
+          <a href="index.html"
+            ><img src="./assets/Logo-hodu.png" alt="HODU"
+          /></a>
         </h1>
         <form action="#" method="get">
           <label for="search"></label>
