--- a/goods.html
+++ b/goods.html
@@ -11,6 +11,7 @@
   <body>
     <header>
       <div class="search-wrap">
+        <!-- 로고 클릭 시 상품 목록 페이지로 연결 -->
         <h1>
           <a href="index.html"
             ><img src="./assets/Logo-hodu.png" alt="HODU"
