--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <p class="price"><span>29,000</span>원</p>
           </a>
         </article>
+        <!-- 상품 상세 페이지로 연결ㅈ -->
         <article>
           <a href="goods.html">
             <img
