🎨 메뉴바 css 적용

--- a/goods.html
+++ b/goods.html
@@ -101,13 +101,13 @@
         </dialog>
         <!-- ----------------------------------------- -->
       </section>
-      <section>
+      <section class="menubar">
         <h2 class="sr-only">상품정보 메뉴바</h2>
         <ul>
-          <li><button class="button">버튼</button></li>
-          <li><button class="button">리뷰</button></li>
-          <li><button class="button">Q&A</button></li>
-          <li><button class="button">반품/교환정보</button></li>
+          <li><button type="button">버튼</button></li>
+          <li><button type="button">리뷰</button></li>
+          <li><button type="button">Q&A</button></li>
+          <li><button type="button">반품/교환정보</button></li>
         </ul>
       </section>
     </main>
