--- a/goods.html
+++ b/goods.html
@@ -89,7 +89,7 @@
         <!-- ---------------modal------------------- -->
         <!-- 바로구매 또는 장바구니 버튼을 눌렀는데 로그인이 되어있지 않으면 로그인 모달창이 뜸 -->
         <dialog class="loginModal">
-          <button>
+          <button class="closeModal">
             <img src="./assets/icon-delete.svg" alt="모달창 닫기" />
           </button>
           <p>
@@ -113,6 +113,26 @@
     </main>
     <script src="./js/goods.js">
       // 상품 클릭 시 document.title HODU : 상품 이름으로 변경되게 적용
+      // 모달창 임시 스크립트
+      const dialog = document.querySelector('.loginModal');
+      const closeDialog = document.querySelector('.closeModal');
+      const buyBtn = document.querySelector('.buy');
+      const cartBtn = document.querySelector('.cart');
+
+      // 바로 구매 버튼 클릭 시 로그인 모달
+      buyBtn.addEventListener('click', () => {
+        dialog.showModal();
+      })
+
+      // 장바구니 버튼 클릭 시 로그인 모달
+      cartBtn.addEventListener('click', () => {
+        dialog.showModal();
+      })
+
+      // 모달창 닫기
+      closeDialog.addEventListener('click', () => {
+        dialog.close();
+      })
     </script>
   </body>
 </html>
