🎨 셀렉스박스 커스텀 : 기본 디자인 제거 및 이미지 적용

--- a/signup.html
+++ b/signup.html
@@ -90,6 +90,8 @@
                 <option value="011">011</option>
                 <option value="016">016</option>
                 <option value="017">017</option>
+                <option value="018">018</option>
+                <option value="019">019</option>
               </select>
               <input
                 type="text"
