--- a/goods.html
+++ b/goods.html
@@ -44,6 +44,14 @@
               마이페이지
             </a>
           </li>
+
+          <!-- 판매자에게만 보이는 버튼 -->
+          <li class="sellerCenter" hidden>
+            <button type="button">
+              <img src="./assets/icon-shopping-bag.svg" alt="" />
+              판매자 센터
+            </button>
+          </li>
         </ul>
       </div>
     </header>
