--- a/goods.html
+++ b/goods.html
@@ -39,10 +39,10 @@
             </a>
           </li>
           <li>
-            <a href="./login.html" class="loginBtn"
-              ><img src="./assets/icon-user.svg" alt="" />
+            <button class="loginBtn">
+              <img src="./assets/icon-user.svg" alt="" />
               마이페이지
-            </a>
+            </button>
           </li>
 
           <!-- 판매자에게만 보이는 버튼 -->
