🎨 수량 변경 js 동작 추가

--- a/goods.html
+++ b/goods.html
@@ -70,11 +70,11 @@
           <p>택배배송/ 무료배송</p>
           <hr />
           <form action="#" class="countForm">
-            <button class="minus" type="button">
+            <button class="minus" type="button" id="minus">
               <img src="./assets/icon-minus-line.svg" alt="수량 빼기" />
             </button>
-            <input type="number" min="1" value="1" />
-            <button class="plus" type="button">
+            <input type="number" min="1" value="1" id="num" />
+            <button class="plus" type="button" id="plus">
               <img src="./assets/icon-plus-line.svg" alt="수량 더하기" />
             </button>
             <hr />
