--- a/index.html
+++ b/index.html
@@ -44,10 +44,17 @@
             </a>
           </li>
           <!-- 로그인회원에게만 보이는 버튼 (로그인 시 위 로그인 버튼은 사라짐) -->
-          <li class="myPage" hidden>
-            <a href="#" class="loginBtn"
+          <li class="myPage">
+            <a href="#" class="loginBtn myPageBtn"
               ><img src="./assets/icon-user.svg" alt="" />
               마이페이지
+              <!-- ---------------modal------------------- -->
+              <!-- 마이페이지 버튼 클릭 시 모달 창이 뜸 -->
+              <dialog class="myPageModal" open>
+                <button class="goMyPage">마이페이지</button>
+                <button class="logout">로그아웃</button>
+              </dialog>
+              <!-- ----------------------------------------- -->
             </a>
           </li>
           <!-- 판매자에게만 보이는 버튼 -->
@@ -60,6 +67,7 @@
         </ul>
       </div>
     </header>
+
     <main>
       <section class="banner">
         <h2 class="sr-only">호두 상품 관련 배너</h2>
