마이페이지 모달창 JS 적용 및 마이페이지 a태그-> button태그로 수정

--- a/goods.html
+++ b/goods.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li>
-            <button class="loginBtn">
+            <button class="myPageBtn">
               <img src="./assets/icon-user.svg" alt="" />
               마이페이지
             </button>
