--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
           </li>
           <!-- 로그인회원에게만 보이는 버튼 (로그인 시 위 로그인 버튼은 사라짐) -->
           <li class="myPage">
-            <a href="#" class="loginBtn myPageBtn"
-              ><img src="./assets/icon-user.svg" alt="" />
+            <button class="myPageBtn">
+              <img src="./assets/icon-user.svg" alt="" />
               마이페이지
-              <!-- ---------------modal------------------- -->
-              <!-- 마이페이지 버튼 클릭 시 모달 창이 뜸 -->
-              <dialog class="myPageModal" open>
-                <button class="goMyPage">마이페이지</button>
-                <button class="logout">로그아웃</button>
-              </dialog>
-              <!-- ----------------------------------------- -->
-            </a>
+            </button>
+            <!-- ---------------modal------------------- -->
+            <!-- 마이페이지 버튼 클릭 시 모달 창이 뜸 -->
+            <dialog class="myPageModal">
+              <button class="goMyPage">마이페이지</button>
+              <button class="logout">로그아웃</button>
+            </dialog>
+            <!-- ----------------------------------------- -->
           </li>
           <!-- 판매자에게만 보이는 버튼 -->
           <li class="sellerCenter" hidden>
