🎨 상품상세페이지 마이페이지 모달창 적용

--- a/goods.html
+++ b/goods.html
@@ -38,11 +38,18 @@
               장바구니
             </a>
           </li>
-          <li>
+          <li class="myPage">
             <button class="myPageBtn">
               <img src="./assets/icon-user.svg" alt="" />
               마이페이지
             </button>
+            <!-- ---------------modal------------------- -->
+            <!-- 마이페이지 버튼 클릭 시 모달 창이 뜸 -->
+            <dialog class="myPageModal">
+              <button class="goMyPage">마이페이지</button>
+              <button class="logout">로그아웃</button>
+            </dialog>
+            <!-- ----------------------------------------- -->
           </li>
 
           <!-- 판매자에게만 보이는 버튼 -->
