--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <!-- 로그인회원에게만 보이는 버튼 (로그인 시 위 로그인 버튼은 사라짐) -->
-          <li class="myPage">
+          <li class="myPage" hidden>
             <button class="myPageBtn">
               <img src="./assets/icon-user.svg" alt="" />
               마이페이지
