🚚 공통 js 파일 추가 및 코드 이동

--- a/goods.html
+++ b/goods.html
@@ -127,5 +127,6 @@
       </section>
     </main>
     <script src="./js/goods.js"></script>
+    <script src="./js/common.js"></script>
   </body>
 </html>
