--- a/index.html
+++ b/index.html
@@ -190,5 +190,6 @@
       </address>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="./js/common.js"></script>
   </body>
 </html>
