--- a/goods.html
+++ b/goods.html
@@ -38,7 +38,14 @@
               장바구니
             </a>
           </li>
-          <li class="myPage">
+          <li class="login">
+            <!-- 기본페이지 로그인 -> 로그인 후 마이페이지로 변경 -->
+            <a href="./login.html" class="loginBtn"
+              ><img src="./assets/icon-user.svg" alt="" />
+              로그인
+            </a>
+          </li>
+          <li class="myPage" hidden>
             <button class="myPageBtn">
               <img src="./assets/icon-user.svg" alt="" />
               마이페이지
