🎨a태그 링크 수정 및 js 수정

--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
         </section>
         <!-- 회원가입 : 회원가입 페이지 연결 / 비밀번호 찾기 : 미구현-->
         <ul class="find">
-          <li><a href="./signup.html">회원가입</a></li>
+          <li><a href="signup.html">회원가입</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
         </ul>
       </article>
