🎨 구매자,판매자 메인페이지 ui  js적용

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="btn-wrap">
         <ul>
-          <li>
+          <li class="cart">
             <a href="#" class="cartBtn"
               ><img src="./assets/icon-shopping-cart.svg" alt="" />
               장바구니
