🎨 버튼을 눌러야 수량 조절 가능

--- a/goods.html
+++ b/goods.html
@@ -87,7 +87,7 @@
             <button class="minus" type="button" id="minus">
               <img src="./assets/icon-minus-line.svg" alt="수량 빼기" />
             </button>
-            <input type="number" min="1" value="1" id="num" />
+            <input type="number" min="1" value="1" id="num" disabled />
             <button class="plus" type="button" id="plus">
               <img src="./assets/icon-plus-line.svg" alt="수량 더하기" />
             </button>
