🎨 기본 이미지 -> 임시 이미지 변경

--- a/goods.html
+++ b/goods.html
@@ -73,7 +73,7 @@
     <main>
       <section class="buy-wrap">
         <h2 class="sr-only">상품 상세 내용</h2>
-        <img src="./assets/담요상세이미지.png" alt="" />
+        <img src="https://via.placeholder.com/600x600" alt="" />
         <section class="goodsInfo-wrap">
           <div class="goodsInfo">
             <p>백엔드 글로벌</p>
