--- a/index.html
+++ b/index.html
@@ -88,10 +88,7 @@
         <h2 class="sr-only">호두 상품 목록</h2>
         <article>
           <a href="#">
-            <img
-              src="./assets/노트북파우치.png"
-              alt="프로그래밍 언어 로고가 다양하게 그려진 파우치"
-            />
+            <img src="https://via.placeholder.com/382x382" alt="" />
             <p>우당탕탕 라이캣의 실험실</p>
             <h3>Hack Your Life 개발자 노트북 파우치</h3>
             <p class="price"><span>29,000</span>원</p>
@@ -99,10 +96,7 @@
         </article>
         <article>
           <a href="#">
-            <img
-              src="./assets/키링.png"
-              alt="고양이와 태그가그려진 머그컵과 노트북 키링"
-            />
+            <img src="https://via.placeholder.com/382x382" alt="" />
             <p>제주코딩베이스캠프</p>
             <h3>네 개발잡니다 개발자키링 금속키링</h3>
             <p class="price"><span>29,000</span>원</p>
@@ -111,10 +105,7 @@
         <!-- 상품 상세 페이지로 연결 -->
         <article>
           <a href="goods.html">
-            <img
-              src="./assets/담요.png"
-              alt="캐릭터들이 그려진 담요를 어깨에 두르고 있는 토끼 캐릭터"
-            />
+            <img src="https://via.placeholder.com/382x382" alt="" />
             <p>백엔드글로벌</p>
             <h3>딥러닝 개발자 무릎 담요</h3>
             <p class="price"><span>29,000</span>원</p>
@@ -122,10 +113,7 @@
         </article>
         <article>
           <a href="#">
-            <img
-              src="./assets/스티커.png"
-              alt="캐릭터와 단어가 있는 스티커 팩"
-            />
+            <img src="https://via.placeholder.com/382x382" alt="" />
             <p>코딩앤유</p>
             <h3>우당탕탕 라이캣의 실험실 스티커 팩</h3>
             <p class="price"><span>29,000</span>원</p>
@@ -133,10 +121,7 @@
         </article>
         <article>
           <a href="#">
-            <img
-              src="./assets/벌레잡는키링.png"
-              alt="404벌레캐릭터와 살충제를 들고있는 개구리 캐릭터"
-            />
+            <img src="https://via.placeholder.com/382x382" alt="" />
             <p>파이썬스쿨</p>
             <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
             <p class="price"><span>29,000</span>원</p>
