🎨 상품목록 및 상세 페이지 수정

--- a/goods.html
+++ b/goods.html
@@ -81,7 +81,7 @@
             <p class="price"><span>17,500</span>원</p>
           </div>
 
-          <p>택배배송/ 무료배송</p>
+          <p class="shippingFee">택배배송/ 무료배송</p>
           <hr />
           <form action="#" class="countForm">
             <button class="minus" type="button" id="minus">
