🎨 기존 상품 내용 주석으로 변경

--- a/index.html
+++ b/index.html
@@ -89,42 +89,57 @@
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>우당탕탕 라이캣의 실험실</p>
+            <p>|</p>
+            <h3>|</h3>
+            <p class="price"><span>|</span>원</p>
+            <!-- <p>우당탕탕 라이캣의 실험실</p>
             <h3>Hack Your Life 개발자 노트북 파우치</h3>
-            <p class="price"><span>29,000</span>원</p>
+            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>제주코딩베이스캠프</p>
+            <p>|</p>
+            <h3>|</h3>
+            <p class="price"><span>|</span>원</p>
+            <!-- <p>제주코딩베이스캠프</p>
             <h3>네 개발잡니다 개발자키링 금속키링</h3>
-            <p class="price"><span>29,000</span>원</p>
+            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <!-- 상품 상세 페이지로 연결 -->
         <article>
           <a href="goods.html">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>백엔드글로벌</p>
+            <p>|</p>
+            <h3>|</h3>
+            <p class="price"><span>|</span>원</p>
+            <!-- <p>백엔드글로벌</p>
             <h3>딥러닝 개발자 무릎 담요</h3>
-            <p class="price"><span>29,000</span>원</p>
+            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>코딩앤유</p>
+            <p>|</p>
+            <h3>|</h3>
+            <p class="price"><span>|</span>원</p>
+            <!-- <p>코딩앤유</p>
             <h3>우당탕탕 라이캣의 실험실 스티커 팩</h3>
-            <p class="price"><span>29,000</span>원</p>
+            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>파이썬스쿨</p>
+            <p>|</p>
+            <h3>|</h3>
+            <p class="price"><span>|</span>원</p>
+            <!-- <p>파이썬스쿨</p>
             <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
-            <p class="price"><span>29,000</span>원</p>
+            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
       </section>
