--- a/goods.html
+++ b/goods.html
@@ -76,12 +76,16 @@
         <img src="https://via.placeholder.com/600x600" alt="" />
         <section class="goodsInfo-wrap">
           <div class="goodsInfo">
-            <p>백엔드 글로벌</p>
-            <h3>딥러닝 개발자 무릎 담요</h3>
-            <p class="price"><span>17,500</span>원</p>
+            <p>|</p>
+            <h3>|</h3>
+            <p class="price"><span>0</span>원</p>
+            <!-- <p>백엔드 글로벌</p> -->
+            <!-- <h3>딥러닝 개발자 무릎 담요</h3> -->
+            <!-- <p class="price"><span>17,500</span>원</p> -->
           </div>
 
-          <p class="shippingFee">택배배송/ 무료배송</p>
+          <p class="shippingFee"></p>
+          <!-- <p class="shippingFee">택배배송/ 무료배송</p> -->
           <hr />
           <form action="#" class="countForm">
             <button class="minus" type="button" id="minus">
