🎨 상품목록 로고 클릭 시 reload

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <!-- 상품 목록 페이지 -->
     <header>
       <div class="search-wrap">
+        <!-- 로고 클릭시 reload -->
         <h1>
-          <a href="#"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
+          <a href="index.html"
+            ><img src="./assets/Logo-hodu.png" alt="HODU"
+          /></a>
         </h1>
         <form action="#" method="get">
           <label for="search"></label>
