--- a/index.html
+++ b/index.html
@@ -34,24 +34,15 @@
       <div class="btn-wrap">
         <ul>
           <li class="cart">
-            <a href="#" class="cartBtn"
-              ><img src="./assets/icon-shopping-cart.svg" alt="" />
-              장바구니
-            </a>
+            <a href="#" class="cartBtn"> 장바구니 </a>
           </li>
           <li class="login">
             <!-- 기본페이지 로그인 -> 로그인 후 마이페이지로 변경 -->
-            <a href="./login.html" class="loginBtn"
-              ><img src="./assets/icon-user.svg" alt="" />
-              로그인
-            </a>
+            <a href="./login.html" class="loginBtn"> 로그인 </a>
           </li>
           <!-- 로그인회원에게만 보이는 버튼 (로그인 시 위 로그인 버튼은 사라짐) -->
           <li class="myPage" hidden>
-            <button class="myPageBtn">
-              <img src="./assets/icon-user.svg" alt="" />
-              마이페이지
-            </button>
+            <button class="myPageBtn">마이페이지</button>
             <!-- ---------------modal------------------- -->
             <!-- 마이페이지 버튼 클릭 시 모달 창이 뜸 -->
             <dialog class="myPageModal">
