🔥 🎨 아이디 중복확인 js 코드 수정

--- a/signup.html
+++ b/signup.html
@@ -42,10 +42,8 @@
               />
               <button type="submit" class="duplicate-check">중복확인</button>
             </div>
-            <!-- 추후 수정 필요 -->
-            <p class="invalidColor hidden">필수 정보입니다.</p>
             <!-- p태그 아이디 중복 확인 메세지 알림 -->
-            <p class="validColor"></p>
+            <p class="idMsg invalidColor"></p>
 
             <label for="password">비밀번호</label>
             <input
