--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,9 @@
     <header>
       <!-- 로고 클릭시 상품목록 페이지로 이동 -->
       <h1>
-        <a href="index.html"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
+        <a href="signup.html"
+          ><img src="./assets/Logo-hodu.png" alt="HODU"
+        /></a>
       </h1>
     </header>
     <main>
